updated css css/font-awesome/

--- a/css/style.css
+++ b/css/style.css
@@ -478,12 +478,22 @@ img.with-border{
 	display:inline;	
 }
 
-#nav-menu > li:before{
+/* #nav-menu > li:before{
   	font-family: "fontello";
   	font-style: normal;
   	font-weight: normal;
   	font-size:10px;
 	content: '\e9bd';
+	color:#f0394d;
+	text-align:center;
+} */
+
+#nav-menu > li:before{
+  	font-family: "FontAwesome";
+  	font-style: normal;
+  	font-weight: normal;
+  	font-size:10px;
+	content: "\f004";
 	color:#f0394d;
 	text-align:center;
 }
@@ -1634,11 +1644,11 @@ input[type=submit]:disabled, input[type=submit]:hover:disabled{
 
 .banner-text.withlove:before{
 	display:block;
-	font-family: "fontello";
+	font-family: "FontAwesome";
 	position:absolute;
 	font-size:22px;
 	color:#FFF;
-	content:"\e806";
+	content: "\f004";
 	top:-17px;
 	left:0;
 	right:0;
@@ -1651,11 +1661,11 @@ input[type=submit]:disabled, input[type=submit]:hover:disabled{
 
 .banner-text.withlove:after{
 	display:block;
-	font-family: "fontello";
+	font-family: "FontAwesome";
 	position:absolute;
 	font-size:22px;
 	color:#f0394d;
-	content:"\e806";
+	content: "\f004";
 	top:-17px;
 	left:0;
 	right:0	;
